  and enhanced), wxSimpleHtmlListBox, wxHyperlinkCtrl, wxColourPickerCtrl,
  wxDirPickerCtrl, wxFilePickerCtrl, wxFontPickerCtrl, wxCollapsiblePane,
  wxSearchCtrl, wxAboutBox, wxTreebook, tar streams.


2.8.7
-----

All (GUI):

- wxGraphicsContext implementations now all have the pixel's center at (0.5,0.5), 
  avoiding differences in anti-aliasing between platforms.

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- wxSystemSettings::GetColour(wxSYS_COLOUR_WINDOW) now returns the background
  colour of text controls.

wxMac:

- Multiline textcontrols now support attributes for margins and alignement; only
  a single tab distance can be set though.
- Deactivated refcounting checks when running under leopard for the toolbar implementation
  as the implementation there seems to be different.
- Fixed 'Reopen' application behaviour (a window was not always shown when reopening the app).


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


All (GUI):

- Added an optimization to UI updates on idle, by only updating when the window
  is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.
  
wxMSW:

- Fixed a bug with a spurious border appearing on wxStatusBar under Windows XP/Vista.

wxGTK:

- Fixed wxSpinCtrl problem not reporting the correct value
  after calling SetValue().
- Fixed problem with key events sometimes being sent to
  parent window. This also solves a problem with being able
  to change the selection of a wxListCtrl while editing a
  label.
- Correct context menu event coming from wxListCtrl to 
  have the right ID (not that from the client window).
  
wxMac:
